--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,15 @@ after_success:
   - docker push dzmitryst/multi-nginx
   - docker push dzmitryst/multi-server
   - docker push dzmitryst/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: 'us-east-1'
+  app: 'multi-docker'
+  env: 'MultiDocker-env-1'
+  bucket_name: 'elasticbeanstalk-us-east-1-629090272540'
+  bucket_path: 'docker-multi'
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
