--- a/.travis.yml
+++ b/.travis.yml
@@ -5,23 +5,23 @@ services:
   - docker
 
 before_install:
-  - docker build -t dzmitryst/react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t cygnetops/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true dzmitryst/react-test npm test
+  - docker run -e CI=true cygnetops/react-test npm test
 
 after_success:
-  - docker build -t dzmitryst/multi-client ./client
-  - docker build -t dzmitryst/multi-nginx ./nginx
-  - docker build -t dzmitryst/multi-server ./server
-  - docker build -t dzmitryst/multi-worker ./worker
+  - docker build -t cygnetops/multi-client-10-14 ./client
+  - docker build -t cygnetops/multi-nginx-10-14 ./nginx
+  - docker build -t cygnetops/multi-server-10-14 ./server
+  - docker build -t cygnetops/multi-worker-10-14 ./worker
   # Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
-  - docker push dzmitryst/multi-client
-  - docker push dzmitryst/multi-nginx
-  - docker push dzmitryst/multi-server
-  - docker push dzmitryst/multi-worker
+  - docker push cygnetops/multi-client-10-14
+  - docker push cygnetops/multi-nginx-10-14
+  - docker push cygnetops/multi-server-10-14
+  - docker push cygnetops/multi-worker-10-14
 
 
 deploy:
